css/index.css
/* new */
body{
    margin:0;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    overflow-x: hidden;
}
.dashboard{
    background-color: #1e1c3b;
    color:white;
    height:100vh;
    padding:20px;
}
.card{
    width:70%;
    padding:60px;
    border-radius:28px;
    background:rgba(17,24,39,.75);
    backdrop-filter:blur(15px);
    border:1px solid rgba(255,255,255,.08);
    box-shadow:0 25px 60px rgba(0,0,0,.4);
    text-align:center;
    margin:50px auto;
    box-shadow:0 2px 26px white;
}
.badge{
    display:inline-flex;
    align-items:center;
    gap:10px;
    padding:12px 24px;
    border-radius:999px;
    border:1px solid rgba(255,255,255,.12);
    color:#ff5d73;
    background:rgba(255,255,255,.03);
    margin-bottom:20px;
    font-weight:600;
}
.card h1{
    font-size:42px;
}
.card p{
    line-height: 1.3;
    color:#a1a1aa;
    font-size:18px;
}
.card h2{
    font-size:32px;
}
.controls{
    display:flex;
    justify-self: center;
    gap:20px;
    flex-wrap:wrap;
}
label{
    font-size:18px;
}
select{
    width:240px;
    padding:12px;
    border-radius:14px;
    border:1px solid rgba(255,255,255,.08);
    background:#111827;
    color:white;
    font-size:16px;
    outline:none;
}
.start-btn button{
    height:56px;
    padding:0 40px;
    border:none;
    border-radius:14px;
    font-size:18px;
    font-weight:700;
    cursor:pointer;
    color:white;
    background:linear-gradient(135deg,#ff4d6d,#ff2e63);
    transition:.3s;
    box-shadow:0 12px 30px rgba(255,70,100,.35);
}
.total-questions{
    border:1px solid rgba(255,255,255,.08);
    border-radius: 18px;
    width:fit-content;
    padding:12px 24px;
    color:#ffffffcd
}

@media (max-width:700px) {
    .dashboard{
        padding:10px;
    }
    .card{
        margin:auto;
    }
}

